fix: improve swagger doc for get heartbeats
